lib/src/compiler/tests/testdata/errors/16.out
error[E002]: wrong type
 --> line:5:11
  |
5 |     $a at "1"
  |           ^^^ expression should be `integer`, but it is `string`
  |